--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.9.2
 Django==5.2.6
 django-environ==0.12.0
-psycopg==3.2.10
 psycopg-binary==3.2.10
 sqlparse==0.5.3
 tzdata==2025.2
-djangorestframework>=3.15
-djangorestframework-simplejwt>=5.3
+
+djangorestframework==3.16.1
+djangorestframework-simplejwt==5.5.1
+django-cors-headers==4.4.0
+whitenoise==6.8.2
+gunicorn==23.0.0
